--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -1,411 +1,346 @@
 // about
 .about {
+  display: flex;
+  flex-direction: column;
+  margin: 50px 0px;
+
+  &_banner {
     display: flex;
-    flex-direction: column;
-    margin: 50px 0px;
+    justify-content: space-between;
+    align-items: center;
+    height: 260px;
+    width: 100%;
 
+    background-color: #f3f3f3ff;
+    text-align: center;
 
-    &_banner {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 260px;
-        width: 100%;
+    &_leftside {
+      width: 500px;
+      height: 260px;
 
-        background-color: #F3F3F3FF;
+      &_img {
+        width: 500px;
+        height: 250px;
+      }
+    }
+
+    &_content {
+      &_title {
+        font-family: "Aleo", serif;
+        font-size: 40px;
+        font-weight: 600;
+        color: #2d2d2d;
+      }
+
+      &_text {
+        color: #707070;
+
+        &_link:hover {
+          color: #5ba515ff;
+        }
+      }
+    }
+
+    &_rightside {
+      width: 500px;
+      height: 260px;
+
+      &_img {
+        width: 500px;
+        height: 250px;
+      }
+    }
+  }
+
+  // about
+
+  // aboutTeam
+
+  .aboutTeam {
+    margin: 85px 50px;
+
+    display: flex;
+    justify-content: space-between;
+
+    &_content {
+      width: 480px;
+      height: 499px;
+
+      &_title {
+        margin-top: 100px;
+        font-size: 30px;
+        font-weight: 600;
+        color: #2d2d2d;
+        font-family: "Aleo", serif;
+        text-align: left;
+      }
+
+      &_underline {
+        border: 1px solid rgb(116, 174, 116);
+        width: 60px;
+        margin: 20px 0px;
+      }
+
+      &_text {
+        font-size: 14px;
+        color: #707070;
+        text-align: left;
+      }
+    }
+  }
+
+  // aboutTeam
+
+  //Counter Section
+  .counterSec {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 70px;
+
+    &_list {
+      display: flex;
+      gap: 80px;
+
+      &_item {
         text-align: center;
 
-
-
-        &_leftside {
-            width: 500px;
-            height: 260px;
-
-
-            &_img {
-                width: 500px;
-                height: 250px;
-            }
+        &_count {
+          font-size: 50px;
         }
 
         &_content {
-            &_title {
-                font-family: "Aleo", serif;
-                font-size: 40px;
-                font-weight: 600;
-                color: #2d2d2d;
-            }
-
-            &_text {
-                color: #707070;
-
-                &_link:hover {
-                    color: #5ba515ff;
-                }
-            }
+          font-size: 15px;
+          font-family: "Aleo", serif;
+          color: #707070;
         }
+      }
+    }
+  }
 
-        &_rightside {
-            width: 500px;
-            height: 260px;
+  //Counter Section
 
-            &_img {
-                width: 500px;
-                height: 250px;
-            }
-        }
+  // introSec
+  .introSec {
+    width: 100%;
+    height: 100%;
+    background-color: #f6f6f6ff;
+    display: flex;
+    justify-content: space-around;
+    padding: 50px;
+
+    &_accordion {
+      width: 40%;
+      display: flex;
+      align-items: center;
+    }
+  }
+  // introSec
+
+  // delivery pros
+  .deleveryPross {
+    margin: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &_title {
+      font-size: 40px;
+      color: #2d2d2d;
+      font-weight: 700;
+      font-family: "Aleo", serif;
+    }
+    .grid_container {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      gap: 40px;
+      padding: 20px;
+      &_clipPathright {
+        position: absolute;
+        width: 30px;
+        height: 15px;
+        clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+        background-color: #f0f0f0ff;
+        transform: rotate(90deg);
+        right: -20px;
+        top: 30px;
+      }
+      &_clipPathleft {
+        position: absolute;
+        width: 30px;
+        height: 15px;
+        clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
+        background-color: #f0f0f0ff;
+        transform: rotate(-90deg);
+        left: -20px;
+        top: 30px;
+      }
+      &_title {
+        padding: 10px;
+        text-align: left;
+        color: #2d2d2d;
+      }
+      &_text {
+        padding: 10px;
+        text-align: left;
+        font-size: 15px;
+        color: #707070;
+      }
+
+      &_step {
+        position: absolute;
+        width: 110px;
+        height: 27px;
+        background-color: #5ba515ff;
+        color: white;
+        font-size: 14px;
+        font-family: "Aleo", serif;
+        font-weight: 700;
+        letter-spacing: 1px;
+        padding: 2px;
+        top: -12px;
+      }
+      &_topright {
+        width: 450px;
+        height: 200px;
+        position: relative;
+        background-color: #f0f0f0;
+        padding: 20px;
+        text-align: center;
+        grid-column: 1;
+        grid-row: 1;
+      }
+
+      &_topleft {
+        width: 450px;
+        height: 200px;
+        position: relative;
+        background-color: #f0f0f0;
+        padding: 20px;
+        text-align: center;
+        grid-column: 2;
+        grid-row: 2;
+      }
+
+      &_bottomright {
+        width: 450px;
+        height: 200px;
+        position: relative;
+        background-color: #f0f0f0;
+        padding: 20px;
+        text-align: center;
+        grid-column: 1;
+        grid-row: 3;
+      }
+
+      &_bottomleft {
+        width: 450px;
+        height: 200px;
+        position: relative;
+        background-color: #f0f0f0;
+        padding: 20px;
+        text-align: center;
+        grid-column: 2;
+        grid-row: 4;
+      }
+    }
+  }
+
+  // ourTeam
+  .ourTeam {
+    margin: 0px 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &_title {
+      font-size: 40px;
+      color: #2d2d2d;
+      font-weight: 700;
+      font-family: "Aleo", serif;
     }
 
-    // about
+    &_people {
+      display: flex;
+      margin-top: 50px;
+      gap: 40px;
+      transition: all 0.5s ease-in-out;
 
+      &_card {
+        position: relative;
+        width: 372px;
+        height: 400px;
 
-    // aboutTeam
-
-    .aboutTeam {
-
-        margin: 85px 50px;
-
-        display: flex;
-        justify-content: space-between;
-
-
-
-
-
-        &_content {
-
-
-            width: 480px;
-            height: 499px;
-
-
-            &_title {
-                margin-top: 100px;
-                font-size: 30px;
-                font-weight: 600;
-                color: #2d2d2d;
-                font-family: "Aleo", serif;
-                text-align: left;
-
-
-            }
-
-
-            &_underline {
-
-                border: 1px solid rgb(116, 174, 116);
-                width: 60px;
-                margin: 20px 0px;
-
-            }
-
-            &_text {
-                font-size: 14px;
-                color: #707070;
-                text-align: left;
-
-            }
+        &:hover {
+          transition: all 0.7s ease-in-out;
+          transform: translateY(-15px);
         }
 
+        &:hover .ourTeam_people_card_over {
+          visibility: visible;
+        }
 
-    }
+        &_over {
+          position: absolute;
+          bottom: 27%;
+          width: 372px;
+          height: 290px;
+          background-color: #2d2d2d;
+          opacity: 0.7;
+          visibility: hidden;
 
-    // aboutTeam
-
-
-    //Counter Section 
-    .counterSec {
-        display: flex;
-        justify-content: center;
-        margin-bottom: 70px;
-
-        &_list {
+          &_social {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
             display: flex;
-            gap: 80px;
 
+            &_list {
+              display: flex;
+              gap: 40px;
 
-            &_item {
-                text-align: center;
-
-                &_count {
-                    font-size: 50px;
-                }
-
-                &_content {
-                    font-size: 15px;
-                    font-family: "Aleo", serif;
-                    color: #707070;
-
-                }
-            }
-        }
-    }
-
-    //Counter Section 
-
-    // introSec
-    .introSec{
-        width: 100hv;
-        height: 500px ;
-        background-color:#F6F6F6FF;
-        display: flex;
-        justify-content: space-around;
-      
-       
-        &_img{
-
-        }
-
-        &_accordion{
-          
-            display: flex;
-            align-items: center;
-
-        }
-
-    }
-     // introSec
-
-     // delivery pros
-     .deleveryPross{
-       margin:  50px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        &_title {
-            font-size: 40px;
-            color: #2d2d2d;
-            font-weight: 700;
-            font-family: "Aleo", serif;
-
-        }
-        .grid_container {
-            display: grid;
-            grid-template-columns: repeat(2, 1fr);
-            grid-template-rows: repeat(2, 1fr);
-            gap: 40px;
-            padding: 20px;
-            &_clipPathright{
-                position: absolute;
-                width: 30px;
-                height: 15px;
-                clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-                background-color: #F0F0F0FF;
-                transform: rotate(90deg);
-                right: -20px;
-                top: 30px;
-               
-  
-            }
-            &_clipPathleft{
-                position: absolute;
-                width: 30px;
-                height: 15px;
-                clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
-                background-color: #F0F0F0FF;
-                transform: rotate(-90deg);
-                left: -20px;
-                top: 30px;
-               
-  
-            }
-            &_title{
-                padding: 10px;
-                text-align: left;
-                color: #2d2d2d;
-            }
-            &_text{
-                padding: 10px;
-                text-align: left;
-                font-size: 15px;
-                color: #707070;
-            }
-            
-           
-    
-            &_step{
-                position: absolute;
-                width: 110px;
-                height: 27px;
-                background-color: #5BA515FF;
+              &_icon {
+                font-size: 16px;
+                cursor: pointer;
                 color: white;
-                font-size: 14px;
-                font-family: "Aleo", serif;
-                font-weight: 700;
-                letter-spacing: 1px;
-                padding: 2px;
-                top: -12px;
-              
-    
-            }
-            &_topright {
-                width: 450px;
-                height: 200px;
-                position: relative;
-                background-color: #f0f0f0;
-                padding: 20px;
-                text-align: center;
-                grid-column: 1;
-                grid-row: 1;
-            
-               
-              }
-              
-              &_topleft {
-                width: 450px;
-                height: 200px;
-                position: relative;
-                background-color: #f0f0f0;
-                padding: 20px;
-                text-align: center;
-                grid-column: 2;
-                grid-row: 2;
-              }
-              
-              &_bottomright {
-                width: 450px;
-                height: 200px;
-                position: relative;
-                background-color: #f0f0f0;
-                padding: 20px;
-                text-align: center;
-                grid-column: 1;
-                grid-row: 3;
-              }
-              
-              &_bottomleft {
-                width: 450px;
-                height: 200px;
-                position: relative;
-                background-color: #f0f0f0;
-                padding: 20px;
-                text-align: center;
-                grid-column: 2;
-                grid-row: 4;
-              }
-          }
-     }
-     
-      
-    
-      
-
-    // ourTeam
-    .ourTeam {
-        margin: 0px 50px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-
-        &_title {
-            font-size: 40px;
-            color: #2d2d2d;
-            font-weight: 700;
-            font-family: "Aleo", serif;
-
-        }
-
-        &_people {
-            display: flex;
-            margin-top: 50px;
-            gap: 40px;
-            transition: all 0.5s ease-in-out;
-
-
-            &_card {
-                position: relative;
-                width: 372px;
-                height: 400px;
 
                 &:hover {
-                    transition: all .7s ease-in-out;
-                    transform: translateY(-15px);
+                  color: #5ba515ff;
                 }
-
-                &:hover .ourTeam_people_card_over {
-                    visibility: visible;
-
-                }
-
-                &_over {
-                    position: absolute;
-                    bottom: 27%;
-                    width: 372px;
-                    height: 290px;
-                    background-color: #2d2d2d;
-                    opacity: 0.7;
-                    visibility: hidden;
-
-
-
-
-                    &_social {
-                        position: absolute;
-                        top: 50%;
-                        left: 50%;
-                        transform: translate(-50%, -50%);
-                        display: flex;
-
-
-
-
-                        &_list {
-                            display: flex;
-                            gap: 40px;
-
-                            &_icon {
-                                font-size: 16px;
-                                cursor: pointer;
-                                color: white;
-
-
-
-                                &:hover {
-
-                                    color: #5ba515ff;
-
-
-
-                                }
-
-                            }
-
-                        }
-
-                    }
-                }
-
-                &_title {
-                    text-align: center;
-                    margin-top: 10px;
-                    color: #2d2d2d;
-
-                    &:hover {
-                        color: #5ba515ff;
-                        cursor: pointer;
-                    }
-                }
-
-                &_profession {
-                    font-size: 14px;
-                    color: #707070;
-                    text-align: center;
-                    margin-top: 5px;
-                }
+              }
             }
-
+          }
         }
+
+        &_title {
+          text-align: center;
+          margin-top: 10px;
+          color: #2d2d2d;
+
+          &:hover {
+            color: #5ba515ff;
+            cursor: pointer;
+          }
+        }
+
+        &_profession {
+          font-size: 14px;
+          color: #707070;
+          text-align: center;
+          margin-top: 5px;
+        }
+      }
     }
+  }
 
-
-    // ourTeam
+  // ourTeam
 }
 
 .active {
-    color: #5ba515ff;
+  color: #5ba515ff;
 }
 
 .border {
-    border-right: 1px solid #d6d5d5;
+  border-right: 1px solid #d6d5d5;
 }
