--- a/src/shared/subscribe/subscribe.scss
+++ b/src/shared/subscribe/subscribe.scss
@@ -1,70 +1,69 @@
 .subscribe {
+  display: flex;
+  justify-content: center;
+
+  &_container {
+    width: 1000px;
+    height: 400px;
+    background-color: #f4f4f4ff;
     display: flex;
+    flex-direction: column;
     justify-content: center;
-    margin-top: 70px;
+    align-items: center;
 
-    &_container {
-        width: 1000px;
-        height: 400px;
-        background-color: #F4F4F4FF;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        &_title {
-            font-family: "Aleo", serif;
-            font-size: 40px;
-            font-weight: 600;
-            color: #2d2d2d;
-            margin: 50px 0px 25px 0px;
-        }
-
-        &_text {
-            color: #707070;
-            margin-top: 30px;
-        }
-
-        &_form {
-            display: flex;
-            justify-content: center;
-
-            &_input {
-                border: none;
-                border-radius: 50px 0px 0px 50px;
-                width: 350px;
-                height: 50px;
-                margin-top: 30px;
-                padding-left: 20px;
-                outline: none;
-            }
-
-            &_button {
-                border-radius: 50px;
-                width: 200px;
-                height: 50px;
-                border: none;
-                background-color: #5ba515ff;
-                color: white;
-                text-align: center;
-                font-size: 16px;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                gap: 10px;
-                margin-top: 30px;
-                cursor: pointer;
-                transition: all .5s ease-in-out;
-
-                &:hover {
-                    background-color: rgb(183, 213, 154);
-                }
-
-                &_icon {
-                    font-size: 16px;
-                    margin-top: 5px;
-                }
-            }
-        }
+    &_title {
+      font-family: "Aleo", serif;
+      font-size: 40px;
+      font-weight: 600;
+      color: #2d2d2d;
+      margin: 50px 0px 25px 0px;
     }
+
+    &_text {
+      color: #707070;
+      margin-top: 30px;
+    }
+
+    &_form {
+      display: flex;
+      justify-content: center;
+
+      &_input {
+        border: none;
+        border-radius: 50px 0px 0px 50px;
+        width: 350px;
+        height: 50px;
+        margin-top: 30px;
+        padding-left: 20px;
+        outline: none;
+      }
+
+      &_button {
+        border-radius: 50px;
+        width: 200px;
+        height: 50px;
+        border: none;
+        background-color: #5ba515ff;
+        color: white;
+        text-align: center;
+        font-size: 16px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        margin-top: 30px;
+        cursor: pointer;
+        transition: all 0.5s ease-in-out;
+
+        &:hover {
+          background-color: rgb(183, 213, 154);
+        }
+
+        &_icon {
+          font-size: 16px;
+          margin-top: 5px;
+        }
+      }
+    }
+  }
 }
