--- a/src/components/Accordion/accordion.scss
+++ b/src/components/Accordion/accordion.scss
@@ -1,32 +1,3 @@
-.accordionitem{
-  border: 1px solid #b1b1b1;
-  background-color: white;
-  width: 450px;
-  height: 50px;
-
-
-  margin-bottom: 20px;
-  
-  &_title{
-    color: #2d2d2d;
-    padding: 15px;
-    font-family: "Aleo", serif;
-    display: flex;
-    justify-content: space-between;
-    cursor: pointer;
-    letter-spacing: 1px;
-    font-weight: 600;
-
-  &:hover{
-    color: #808080
-  }
-
-  };
- 
-  &_content{
-    padding: 50px;
-    background-color: white;
-    color: #808080;
-
-  }
+.accordion {
+  width: 100%;
 }
