--- a/src/components/CountDown/countdown.scss
+++ b/src/components/CountDown/countdown.scss
@@ -1,33 +1,13 @@
-.countdown{
+.countdown {
+  display: flex;
+  gap: 30px;
+  margin-top: 20px;
+
+  &-timer {
     display: flex;
-    gap: 30px;
-    margin-top: 20px;
-   
-    &_dot{
-        font-size: 40px;
-        color: #5BA515FF;
-    }
- &_item{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    &_count{
-
-       
-        font-size: 40px;
-        font-weight: 700;
-        color:#5BA515FF;
-        
-
-    }
-    &_time{
-       
-        font-size: 12px;
-        color:  #707070;
-       
-
-    }
- }
-  
-  
+    gap: 10px;
+    font-size: 30px;
+    font-weight: 600;
+    color: #5ba515ff;
+  }
 }
