--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,187 +1,165 @@
 // about banner
 .contact {
+  display: flex;
+  flex-direction: column;
+  gap: 70px;
 
+  &_banner {
+    margin-top: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 260px;
+    width: 100%;
+
+    background-color: #f3f3f3ff;
+    text-align: center;
+
+    &_leftside {
+      width: 500px;
+      height: 260px;
+
+      &_img {
+        width: 500px;
+        height: 250px;
+      }
+    }
+
+    &_content {
+      &_title {
+        font-family: "Aleo", serif;
+        font-size: 40px;
+        font-weight: 600;
+        color: #2d2d2d;
+      }
+
+      &_text {
+        color: #707070;
+
+        &_link:hover {
+          color: #5ba515ff;
+        }
+      }
+    }
+
+    &_rightside {
+      width: 500px;
+      height: 260px;
+
+      &_img {
+        width: 500px;
+        height: 250px;
+      }
+    }
+  }
+
+  // contact banner
+
+  // contact info
+  .contact_info {
+    margin: 40px 0px;
+    display: flex;
+    justify-content: space-around;
+
+    &_item {
+      border-right: 1px solid #dbdbdb;
+      width: 400px;
+      height: 200px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      gap: 20px;
+
+      &_icons {
+        width: 70px;
+        height: 70px;
+        border: 1px solid #dbdbdb;
+        background-color: #f2f1f1;
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &_icon {
+          font-size: 20px;
+        }
+      }
+
+      &_title {
+        color: #2d2d2d;
+      }
+
+      &_text {
+        text-align: center;
+        font-size: 14px;
+        color: #707070;
+      }
+    }
+  }
+
+  .border {
+    border: none;
+  }
+
+  // contact info
+  //contact touch
+  .contact_touch {
     display: flex;
     flex-direction: column;
-    gap: 70px;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
 
-
-
-    &_banner {
-        margin-top: 50px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 260px;
-        width: 100%;
-
-        background-color: #F3F3F3FF;
-        text-align: center;
-
-
-
-        &_leftside {
-            width: 500px;
-            height: 260px;
-
-
-            &_img {
-                width: 500px;
-                height: 250px;
-            }
-        }
-
-        &_content {
-            &_title {
-                font-family: "Aleo", serif;
-                font-size: 40px;
-                font-weight: 600;
-                color: #2d2d2d;
-            }
-
-            &_text {
-                color: #707070;
-
-                &_link:hover {
-                    color: #5ba515ff;
-                }
-            }
-        }
-
-        &_rightside {
-            width: 500px;
-            height: 260px;
-
-            &_img {
-                width: 500px;
-                height: 250px;
-            }
-        }
+    &_title {
+      font-size: 40px;
+      color: #2d2d2d;
+      margin-bottom: 15px;
     }
 
-    // contact banner
-
-    // contact info
-    .contact_info {
-        margin: 40px 0px;
-        display: flex;
-        justify-content: space-around;
-
-        &_item {
-
-            border-right: 1px solid #dbdbdb;
-            width: 400px;
-            height: 200px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            gap: 20px;
-
-
-            &_icons {
-                width: 70px;
-                height: 70px;
-                border: 1px solid #dbdbdb;
-                background-color: #f2f1f1;
-                border-radius: 50%;
-                display: flex;
-                align-items: center;
-                justify-content: center;
-
-                &_icon {
-                    font-size: 20px;
-                }
-            }
-
-
-            &_title {
-                color: #2d2d2d;
-            }
-
-            &_text {
-                text-align: center;
-                font-size: 14px;
-                color: #707070;
-            }
-        }
+    &_text {
+      font-size: 14px;
+      text-align: center;
+      color: #707070;
+      margin-bottom: 20px;
     }
 
-    .border {
-        border: none;
+    &_input {
+      display: flex;
+      gap: 45px;
+
+      &_item {
+        width: 350px;
+        height: 50px;
+        padding-left: 10px;
+        border: 1px solid #dbdbdb;
+        outline: none;
+      }
     }
 
-    // contact info
-    //contact touch
-    .contact_touch {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 30px;
-
-
-        &_title {
-            font-size: 40px;
-            color: #2d2d2d;
-            margin-bottom: 15px
-        }
-
-        ;
-
-        &_text {
-            font-size: 14px;
-            text-align: center;
-            color: #707070;
-            margin-bottom: 20px;
-
-        }
-
-        ;
-
-        &_input {
-            display: flex;
-            gap: 55px;
-
-
-
-
-            &_item {
-
-
-
-                width: 350px;
-                height: 50px;
-                padding-left: 10px;
-                border: 1px solid #dbdbdb;
-                outline: none
-            }
-
-
-        }
-
-        ;
-
-        &_textarea {
-            border: 1px solid #dbdbdb;
-            outline: none;
-            padding: 10px 10px;
-        }
-
-        &_btn {
-            width: 200px;
-            height: 50px;
-            border: none;
-            border-radius: 50px;
-            color: white;
-            background-color: #5ba515ff;
-            font-size: 16px;
-            margin-bottom: 20px
-        }
-
-        ;
-
+    &_textarea {
+      width: 75%;
+      height: 200px;
+      max-width: 75%;
+      min-width: 75%;
+      min-height: 200px;
+      max-height: 400px;
+      border: 1px solid #dbdbdb;
+      outline: none;
+      padding: 10px 10px;
     }
 
-    //contact touch
+    &_btn {
+      width: 200px;
+      height: 50px;
+      border: none;
+      border-radius: 50px;
+      color: white;
+      background-color: #5ba515ff;
+      font-size: 16px;
+      margin-bottom: 20px;
+    }
+  }
+
+  //contact touch
 }
