--- a/src/pages/blog/blog.scss
+++ b/src/pages/blog/blog.scss
@@ -354,76 +354,76 @@
 
   // subscribe
 
-  .subscribe {
-    display: flex;
-    justify-content: center;
-    margin: 70px 0px;
+  // .subscribe {
+  //   display: flex;
+  //   justify-content: center;
+  //   margin: 70px 0px;
 
-    &_container {
-      width: 1000px;
-      height: 400px;
-      background-color: #f4f4f4ff;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
+  //   &_container {
+  //     width: 1000px;
+  //     height: 400px;
+  //     background-color: #f4f4f4ff;
+  //     display: flex;
+  //     flex-direction: column;
+  //     justify-content: center;
+  //     align-items: center;
 
-      &_title {
-        font-family: "Aleo", serif;
-        font-size: 40px;
-        font-weight: 600;
-        color: #2d2d2d;
-        margin: 50px 0px 25px 0px;
-      }
+  //     &_title {
+  //       font-family: "Aleo", serif;
+  //       font-size: 40px;
+  //       font-weight: 600;
+  //       color: #2d2d2d;
+  //       margin: 50px 0px 25px 0px;
+  //     }
 
-      &_text {
-        color: #707070;
-        margin-top: 30px;
-      }
+  //     &_text {
+  //       color: #707070;
+  //       margin-top: 30px;
+  //     }
 
-      &_form {
-        display: flex;
-        justify-content: center;
-        justify-content: baseline;
+  //     &_form {
+  //       display: flex;
+  //       justify-content: center;
+  //       justify-content: baseline;
 
-        &_input {
-          border: none;
-          border-radius: 50px 0px 0px 50px;
-          width: 350px;
-          height: 50px;
-          margin-top: 30px;
-          padding-left: 20px;
-          outline: none;
-        }
+  //       &_input {
+  //         border: none;
+  //         border-radius: 50px 0px 0px 50px;
+  //         width: 350px;
+  //         height: 50px;
+  //         margin-top: 30px;
+  //         padding-left: 20px;
+  //         outline: none;
+  //       }
 
-        &_button {
-          border-radius: 50px;
-          width: 200px;
-          height: 50px;
-          border: none;
-          background-color: #5ba515ff;
-          color: white;
-          text-align: center;
-          font-size: 16px;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          gap: 10px;
-          margin-top: 30px;
-          cursor: pointer;
+  //       &_button {
+  //         border-radius: 50px;
+  //         width: 200px;
+  //         height: 50px;
+  //         border: none;
+  //         background-color: #5ba515ff;
+  //         color: white;
+  //         text-align: center;
+  //         font-size: 16px;
+  //         display: flex;
+  //         align-items: center;
+  //         justify-content: center;
+  //         gap: 10px;
+  //         margin-top: 30px;
+  //         cursor: pointer;
 
-          &:hover {
-            background-color: rgb(183, 213, 154);
-          }
+  //         &:hover {
+  //           background-color: rgb(183, 213, 154);
+  //         }
 
-          &_icon {
-            font-size: 16px;
-            margin-top: 5px;
-          }
-        }
-      }
-    }
-  }
+  //         &_icon {
+  //           font-size: 16px;
+  //           margin-top: 5px;
+  //         }
+  //       }
+  //     }
+  //   }
+  // }
 
   // subscribe
 }
