--- a/src/shared/footer/footer.scss
+++ b/src/shared/footer/footer.scss
@@ -1,7 +1,16 @@
+@import "../../style/mixins.scss";
+
 .container {
   display: flex;
   justify-content: space-around;
   padding: 0px 0px 20px 0px;
+
+  @include mobile {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 20px 0px;
+  }
 
   .contact {
     &_list {
@@ -37,16 +46,31 @@
   .popularTag {
     &_title {
       text-align: center;
+
+      @include mobile {
+        text-align: start;
+      }
     }
 
     .popularTag_containers {
       display: flex;
       gap: 20px;
 
+      @include mobile {
+        gap: 10px;
+        flex-direction: column;
+      }
+
       &_buttons {
         display: flex;
         flex-direction: column;
         gap: 15px;
+
+        @include mobile {
+          flex-direction: row;
+          flex-wrap: wrap;
+          gap: 5px;
+        }
 
         &_item {
           border: 1px solid #a19e9e;
@@ -70,6 +94,12 @@
         display: flex;
         flex-direction: column;
         gap: 15px;
+
+        @include mobile {
+          flex-direction: row;
+          flex-wrap: wrap;
+          gap: 5px;
+        }
       }
     }
   }
@@ -79,6 +109,10 @@
     display: flex;
     flex-direction: column;
     gap: 15px;
+
+    @include mobile {
+      margin-bottom: 10px;
+    }
   }
 
   .footer_list {
