--- a/src/shared/subscribe/subscribe.scss
+++ b/src/shared/subscribe/subscribe.scss
@@ -1,9 +1,11 @@
+@import "../../style/mixins.scss";
+
 .subscribe {
   display: flex;
   justify-content: center;
 
   &_container {
-    width: 1000px;
+    width: 100%;
     height: 400px;
     background-color: #f4f4f4ff;
     display: flex;
@@ -11,22 +13,49 @@
     justify-content: center;
     align-items: center;
 
+    @include mobile {
+      width: 100%;
+      height: 300px;
+      padding: 20px;
+    }
+
+    &_logo {
+      @include mobile {
+        width: 80%;
+      }
+    }
+
     &_title {
       font-family: "Aleo", serif;
       font-size: 40px;
       font-weight: 600;
       color: #2d2d2d;
       margin: 50px 0px 25px 0px;
+
+      @include mobile {
+        font-size: 22px;
+        text-align: center;
+        margin: 0px;
+      }
     }
 
     &_text {
       color: #707070;
       margin-top: 30px;
+
+      @include mobile {
+        text-align: center;
+        font-size: 12px;
+      }
     }
 
     &_form {
       display: flex;
       justify-content: center;
+
+      @include mobile {
+        flex-direction: column;
+      }
 
       &_input {
         border: none;
@@ -36,6 +65,13 @@
         margin-top: 30px;
         padding-left: 20px;
         outline: none;
+
+        @include mobile {
+          width: 250px;
+          height: 35px;
+          margin-top: 15px;
+          border-radius: 50px;
+        }
       }
 
       &_button {
@@ -55,6 +91,14 @@
         cursor: pointer;
         transition: all 0.5s ease-in-out;
 
+        @include mobile {
+          width: 50%;
+          height: 35px;
+          font-size: 12px;
+          gap: 5px;
+          margin-top: 10px;
+        }
+
         &:hover {
           background-color: rgb(183, 213, 154);
         }
@@ -62,6 +106,10 @@
         &_icon {
           font-size: 16px;
           margin-top: 5px;
+
+          @include mobile {
+            font-size: 12px;
+          }
         }
       }
     }
