--- a/src/components/carousel/carousel.scss
+++ b/src/components/carousel/carousel.scss
@@ -1,13 +1,14 @@
 .carousel {
-  padding: 50px 0px;
+  overflow: hidden;
+}
 
-  &-slides {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    gap: 0px 100px;
-  }
+.carousel-slides {
+  display: flex;
+  gap: 0px 50px;
+  justify-content: space-around;
+
+}
+
+.carousel-slides-image {
+  flex: 0 0 auto;
 }
